--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": ">=14.x.x",
+    "npm": ">=6.x.x"
   }
 }
