--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todoapi",
-  "version": "0.0.0",
+  "version": "1.0.1",
+  "description": "Todo apis",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
